# sudoku

./: .gitignore  CMakeLists.txt  README.md  sudokuSolved.csv  sudokuSwordFish.csv  sudokuXWing.csv
app/: main.cpp
inc/: Cell.h  Line.h  Matrix.h  Square.h  back_tracking_solver.h  cell.h  coloring.h  fisherman.h  line.h  matrix.h  new_cell.h  new_line.h  new_matrix.h  new_square.h  square.h  sudoku_displayer.h  sudoku_solver.h  timer.h  val_key.h
src/: CMakeLists.txt  Cell.cpp  Line.cpp  Matrix.cpp  Square.cpp  back_tracking_solver.cpp  cell.cpp  coloring.cpp  fisherman.cpp  line.cpp  matrix.cpp  new_cell.cpp  new_line.cpp  new_matrix.cpp  new_square.cpp  square.cpp  sudoko_solver.cpp  sudoku_displayer.cpp  sudoku_solver.cpp
sudoku_grids/: sudoku_easy.csv  sudoku_expert.csv  sudoku_hard.csv
test/: CMakeLists.txt  fisherman_gtest.cpp  line_gtest.cpp  main.cpp  new_line_gtest.cpp  new_square_gtest.cpp
